# hypertoken

./: .gitignore  Anchor.toml  DEPLOYMENT.md  DEPLOYMENT_COMPLETE.md  GITHUB_SETUP.md  README.md  deploy.sh  env.example  package-lock.json  package.json  tsconfig.json
frontend/: package-lock.json  package.json  tailwind.config.js  vercel.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/create/: page.tsx
frontend/src/app/portfolio/: page.tsx
frontend/src/app/recent/: page.tsx
frontend/src/app/test/: page.tsx
frontend/src/components/: CreateTokenForm.tsx  MarketCard.tsx  Navigation.tsx  RecentTokenCard.tsx  SolanaWalletProvider.tsx  Stats.tsx  TokenCard.tsx
frontend/src/idl/: hypertoken.ts
frontend/src/lib/: marketData.ts  solana.ts
programs/hypertoken/: Cargo.toml
programs/hypertoken/src/: lib.rs  lib.rs.backup
tests/: hypertoken.ts
