[package]
name = "hypertoken"
version = "0.1.0"
description = "A pump.fun clone for Solana - Create and trade tokens on Solana blockchain"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "hypertoken"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
